# Ray-racing-club

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Camera.cpp  Camera.cu  Camera.h  CommonMath.cpp  CommonMath.h  Controller.cpp  Controller.h  HitList.h  Hittable.h  Main.cpp  MainWindow.cpp  MainWindow.h  Managed.cu  Managed.h  Quaternion.cpp  Quaternion.h  README.md  Ray.cpp  Ray.h  Renderer.cpp  Renderer.cu  Renderer.h  Sphere.h  Vector3D.cpp  Vector3D.cu  Vector3D.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Common/: ErrorHandling.cpp  ErrorHandling.h  Invalidatable.cpp  Math.h  Rand.h  Vector3D.cu  Vector3D.h
ErrorProcessing/: ErrorHandling.cpp  Invalidatable.h
Hittable/: Hittable.h  HittableDef.cu  HittableDef.h  HittableList.cpp  HittableList.cu  HittableList.h  Scene.cu  Scene.h  Sphere.cpp  Sphere.cu  Sphere.h  Triangle.cpp  Triangle.h  World.cpp  World.cu  World.cuh  World.h
Material/: Dielectric.cu  Dielectric.h  Lambertian.cu  Lambertian.h  Material.h  MaterialDef.cu  MaterialDef.h  Metal.cu  Metal.h
Materials/: Material.cpp  Material.h  Utility.cpp  Utility.h
Math/: Math.h  Quaternion.cu  Quaternion.h  Rand.h  Ray.h  Vector3D.cu  Vector3D.h
Memory/: Unified.cu  Unified.h
Render/: Camera.cu  Camera.h  Renderer.cpp  Renderer.cu  Renderer.h
UI/: CMakeLists.txt  Controller.cpp  Controller.h  DielectricEdit.cpp  DielectricEdit.h  HittableEdit.cpp  HittableEdit.h  LambertianEdit.cpp  LambertianEdit.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MaterialEdit.h  MetalEdit.cpp  MetalEdit.h  SphereEdit.cpp  SphereEdit.h  TriangleEdit.cpp  TriangleEdit.h  WorldEdit.cpp  WorldEdit.h
